--- a/config/content.htm
+++ b/config/content.htm
@@ -124,7 +124,7 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 <div>
 <h2>W5</h2>
 <div>
-<h3><span>網路詢答整理(對 ChatGPT 提問)</span></h3>
+<h3>網路詢答整理(對 ChatGPT 提問)</h3>
 <div>精密機械專業的實習，可能需要準備以下資料和文件：</div>
 </div>
 </div>
@@ -197,7 +197,7 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 <div><span>說明如何透過與 ChatGPT 的對話, 了解有關 git 在不同專業領域的應用方法</span></div>
 </div>
 <div>
-<h3><span>Git 歷史與希望解決的問題</span></h3>
+<h3>Git 歷史與希望解決的問題</h3>
 <div><span>A1 請簡述一下 Git 的發展歷史, 以及當時的背景如何?A2 Git 想要解決甚麼問題?</span></div>
 <br/>
 <div><span>A1:Git 的發展歷史可以追溯到2005年，由Linux之父Linus Torvalds開始開發。當時的背景是開源軟體社群中版本控制系統的需求日益迫切。</span></div>
@@ -221,7 +221,7 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 <br/>
 <div><span>總的來說，Git 的誕生不僅是為了滿足Linux內核開發的具體需求，也因為它解決了當時許多開發團隊普遍面臨的版本控制問題，並且提供了更先進、更靈活和更高效的解決方案，這使得它迅速成為了全球開發者社群的首選版本控制系統。</span></div>
 <br/>
-<h3><span>Git 如何解決產品設計問題</span></h3>
+<h3>Git 如何解決產品設計問題</h3>
 <div><span>Git 在產品設計領域的應用可以幫助解決多個問題，主要集中在版本控制、協作和追蹤變更等方面：</span></div>
 <br/>
 <div><span>1.版本控制：</span></div>
@@ -240,7 +240,7 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 <br/>
 <div><span>總結來說，Git 在產品設計中的應用不僅使得版本控制更加靈活和高效，還能夠有效管理多人協作、追蹤變更，從而提升整個設計過程的效率和品質。</span></div>
 <br/>
-<h3><span>從 git init 到 git push</span></h3>
+<h3>從 git init 到 git push</h3>
 <div><span>啟動近端可攜程式系統</span></div>
 <br/>
 <div><span>更換目錄至 y:\tmp 分別建立 gitproject\repository 與 gitserver\repository 目錄</span></div>
@@ -280,15 +280,15 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 <div><span>從教育的本質看網際內容管理課程的內容要點</span></div>
 <div>
 <div>
-<h3><span>從教育的本質看課程內容</span></h3>
+<h3>從教育的本質看課程內容</h3>
 <div><span>理查德.萊文在某畢業典禮上所闡述的觀點:大學不應僅僅提供專業知識和技能，而應培養對學生的渴望和對世界的好奇心，如果畢業生在畢業後具有特定的專業知識和技能，那反應大學的是失敗，學生應該在畢業後根據自己德興去來追求事物。</span></div>
 <br/>
 <div><span>他也鼓勵學生探索不同學科及科目的廣泛教育重要性，促進智識好奇心及批判性思維，不僅僅專注於專業知識，也強調大學培養學生的智識能力、創造力和領導能力，不僅僅是學術成就與榮譽。</span></div>
-<h3><span>心得</span></h3>
+<h3>心得</h3>
 <div><span>這堂課的內容讓我認識了一位經濟學家，他所認為的教育跟我已往聽到的教育不太一樣，他的教育是以找到學生的興趣去做教育並且啟發更多的發展價值，而不單單僅限於一個能力去侷限了自己能做的更多事，聽完他的話後我覺得很有道理，我想作為學生的我也應該好好的思考自己的教育了。</span></div>
-<h2><span>課程期中心得</span></h2>
+<h2>課程期中心得</h2>
 <div>
-<h3><span>網頁式內容管理</span></h3>
+<h3>網頁式內容管理</h3>
 <div><span>Q1:如何建立 Github 上的網站?</span></div>
 <br/>
 <div><span>A1: GitHub 上建立網站可以使用 GitHub Pages ，先創立一個儲存庫，名稱為username.github.io，在存儲庫中創建一個名為「index.html」的 HTML 文件，用於構建你的網站主頁。將網站的代碼添加到 index.html 文件中，然後把它推到 GitHub 存儲庫。</span></div>
@@ -394,7 +394,7 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 <div><span>5.編輯和分享</span></div>
 <br/>
 <div><span>6.儲存</span></div>
-<h3><span>Python 程式系統</span></h3>
+<h3>Python 程式系統</h3>
 <div><span>Q1:如何利用電腦輔助設計室的舊 Python 建立新的可攜環境?</span></div>
 <br/>
 <div><span>要利用 Python 建立新的可攜環境（portable environment），通常可以使用虛擬環境（virtual environment）的概念來達成。這樣可以隔離和管理不同專案或需求所使用的 Python 庫和依賴。</span></div>
@@ -452,7 +452,7 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 <br/>
 <div><span>特定系統模擬指的是專門針對某一特定系統或設備進行的模擬和仿真過程。這種模擬通常旨在評估系統的性能、行為、效率或其他特定屬性，以便於設計改進、決策支持或問題解決。這些模擬可以涵蓋各種不同的領域和應用。</span></div>
 <br/>
-<h3><span>網頁上的 IDE</span></h3>
+<h3>網頁上的 IDE</h3>
 <div><span>IDE 是甚麼? </span></div>
 <br/>
 <div><span>它是一種軟體應用程序，旨在為軟體開發人員提供一個集成的工作環境，以便在其中進行軟體開發、測試、除錯和部署。IDE 提供了多種工具和功能，使開發過程更加高效和便捷。</span></div>
@@ -475,7 +475,7 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 <div><span>與近端操作系統上的開發有何不同?</span></div>
 <br/>
 <div><span>多人協同這樣安全嗎? </span></div>
-<h3><span>AI 工具</span></h3>
+<h3>AI 工具</h3>
 <div><span>ChatGPT 與 Gemini Pro 都可以直接利用 Gmail 帳號登入, 初級應用目前都可免費使用, 這兩個 AI 工具可以協助我們解決甚麼問題? </span></div>
 <br/>
 <div><span>AI 工具曾經協助我們解決甚麼問題?</span></div>
@@ -484,16 +484,18 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 </div>
 </div>
 <div>
+<div><span></span></div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<h2>w11</h2>
 <div>
-<span></span>
-</div>
-</div>
-</div>
-</div>
-</div>
+<div><span>說明如何在網頁中加入 Brython 程式應用</span></div>
+<div><span></span></div>
 </div>
 <h1>cmsimde</h1>
-</div>
 <p><span style="background-color: #ccffcc;">SMap</span> - SiteMap - 依照階次列出網站的所有頁面.</p>
 <p><span style="background-color: #ccffcc;">EditA</span> - Edit All page - 將所有頁面放入編輯模式中, 主要用來處理頁面搬遷, 刪除或決定衝突頁面內容版本.</p>
 <p><span style="background-color: #ccffcc;">Edit</span> - Edit page - 先選擇要編輯的單一頁面後, 再點選 Edit, 即可進入單一頁面的編輯模式.</p>
@@ -816,4 +818,5 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
 </p>
+</div>
 </div>
