--- a/content/w11.html
+++ b/content/w11.html
@@ -142,16 +142,12 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">First << <a href='First.html'>Previous</a> <a href='課程內容及課後心得.html'>Next</a> >> 課程內容及課後心得<br /><h1>About</h1>
-<p>網頁: 請填入目前網站所在的 URL, <a href="https://cya41223106.github.io/wcm2024">https://cya41223106.github.io/wcm2024</a></p>
-<p>網誌: 請填入目前網站所在的 URL/blog,  <a href="https://cya41223106.github.io/wcm2024/blog">https://cya41223106.github.io/wcm2024/blog</a></p>
-<p>簡報: 請填入目前網站所在的 URL/reveal, <a href="https://mde.tw/cmsimde_site/reveal">https://mde.tw/cmsimde_site/reveal</a></p>
-<p>倉儲: 請填入目前網站所對應的 Github 倉儲連結</p>
-<p>本 cmsimde 網際內容管理系統的對應 Template 倉儲:</p>
- <a href="https://github.com/CYA41223106/wcm2024">https://github.com/CYA41223106/wcm2024</a><br/>
-<p style="padding-left: 30px;">此 Template 將 cmsimde 作為子目錄而非子模組, 使用者可以依照需求自行修改</p>
-<p style="padding-left: 30px;">倉儲對應網站: <a href="https://cya41223106.github.io/wcm2024">https://cya41223106.github.io/wcm2024</a></p>
-<br />First << <a href='First.html'>Previous</a> <a href='課程內容及課後心得.html'>Next</a> >> 課程內容及課後心得</div>
+    <div id="tipue_search_content">AI 工具 << <a href='AI 工具.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>w11</h1>
+<div>
+<div><span>說明如何在網頁中加入 Brython 程式應用</span></div>
+<div><span></span></div>
+</div>
+<br />AI 工具 << <a href='AI 工具.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde</div>
 
     <!-- footer -->
       <div class="container">
