--- a/content/w13.html
+++ b/content/w13.html
@@ -142,12 +142,11 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">AI 工具 << <a href='AI 工具.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>w11</h1>
+    <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>w13</h1>
 <div>
-<div><span>說明如何在網頁中加入 Brython 程式應用</span></div>
-<div><span></span></div>
+<div><span>從單機猜數字遊戲與 AI 應用談起</span></div>
 </div>
-<br />AI 工具 << <a href='AI 工具.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+<br />w11 << <a href='w11.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde</div>
 
     <!-- footer -->
       <div class="container">
