--- a/content/從教務主機直接擷取資料.html
+++ b/content/從教務主機直接擷取資料.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,10 +142,12 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">課後心得-1 << <a href='課後心得-1.html'>Previous</a> <a href='確認已建立個人網站.html'>Next</a> >> 確認已建立個人網站<br /><h1>W2</h1>
-<div>
-<div><span>四技 WCM 第二週課程, 利用 Github Codespaces 維護個人與分組網站.</span></div>
-<br />課後心得-1 << <a href='課後心得-1.html'>Previous</a> <a href='確認已建立個人網站.html'>Next</a> >> 確認已建立個人網站</div>
+    <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>從教務主機直接擷取資料</h1>
+<p>利用 wsgi_v1.py 可以取得結果: wsgi_v1_output.txt 表示可以利用 Flask 建置網站程式取下教務主機中的相關資料.</p>
+</div>
+<div><span></span></div>
+</div>
+<br />w11 << <a href='w11.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
 
     <!-- footer -->
       <div class="container">
