--- a/config/content.htm
+++ b/config/content.htm
@@ -493,6 +493,10 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 <h2>w11</h2>
 <div>
 <div><span>說明如何在網頁中加入 Brython 程式應用</span></div>
+<div>
+<h3>從教務主機直接擷取資料</h3>
+<p>利用 wsgi_v1.py 可以取得結果: wsgi_v1_output.txt 表示可以利用 Flask 建置網站程式取下教務主機中的相關資料.</p>
+</div>
 <div><span></span></div>
 </div>
 <h2>w13</h2>
@@ -517,7 +521,8 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 <p><span style="background-color: #ccffcc;">SStatic</span> - Start Static Site - 利用 Python 啟動網站伺服功能, 可以讓使用者檢查轉檔後的靜態網站內容.</p>
 <p><span style="background-color: #ccffcc;">RStatic</span> - Replit Static Site URL - 僅用於 Replit 模式, 當使用者按下 SStatic 後, 可以按下 RStatic 進入當下尚未推向 Github Pages 的靜態網站.</p>
 <p><span style="background-color: #ccffcc;">80</span> - 由 init.py 中 static_port 所決定的連結字串, 一般不使用 80, 只有在 Replit 中為了與動態網站共用 port, 才特別設為 80.</p>
-<p></p><h1>Codespaces</h1>
+<p></p>
+<h1>Codespaces</h1>
 <p><a href="https://cya41223106.github.io/wcm2024">https://cya41223106.github.io/wcm2024</a></p>
 <p></p>
 <p></p>
