--- a/content/期末專案.html
+++ b/content/期末專案.html
@@ -142,10 +142,9 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">課後心得-1 << <a href='課後心得-1.html'>Previous</a> <a href='確認已建立個人網站.html'>Next</a> >> 確認已建立個人網站<br /><h1>W2</h1>
-<div>
-<div><span>四技 WCM 第二週課程, 利用 Github Codespaces 維護個人與分組網站.</span></div>
-<br />課後心得-1 << <a href='課後心得-1.html'>Previous</a> <a href='確認已建立個人網站.html'>Next</a> >> 確認已建立個人網站</div>
+    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>期末專案</h1>
+<p></p>
+<br />w13 << <a href='w13.html'>Previous</a> <a href='cmsimde.html'>Next</a> >> cmsimde</div>
 
     <!-- footer -->
       <div class="container">
