--- a/content/先看看 Linux.html
+++ b/content/先看看 Linux.html
@@ -142,9 +142,11 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">利用 Github Classroom 分組 << <a href='利用 Github Classroom 分組.html'>Previous</a> <a href='常用的 git 指令.html'>Next</a> >> 常用的 git 指令<br /><h1>利用 Github Codespaces 維護倉儲</h1>
-<div><span>使用 Replit 管理分組網站, 必須採動態建立 .ssh 目錄中的私鑰與 config, 過程比較複雜, 但若採用 Github Codespaces, 則可以在登入 Github 帳號下, 管理該帳號所有授權的倉儲, 包括分組倉儲與網站</span></div>
-<br />利用 Github Classroom 分組 << <a href='利用 Github Classroom 分組.html'>Previous</a> <a href='常用的 git 指令.html'>Next</a> >> 常用的 git 指令</div>
+    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='猜猜看遊戲.html'>Next</a> >> 猜猜看遊戲<br /><h1>先看看 Linux</h1>
+<p>在 Linux 設定全域 Proxy 伺服器的位置, 可以是 /etc/environment 檔案中的:</p>
+<p>http_proxy="http://your_proxy_server:port"</p>
+<p>https_proxy="http://your_proxy_server:port"</p>
+<br />w13 << <a href='w13.html'>Previous</a> <a href='猜猜看遊戲.html'>Next</a> >> 猜猜看遊戲</div>
 
     <!-- footer -->
       <div class="container">
