修改網站內容

--- a/content/w14.html
+++ b/content/w14.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,9 +142,16 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">Github 帳號 << <a href='Github 帳號.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>課後心得-1</h1>
-<p>第一堂的內容對我們來說不算太複雜，因為上學期剛上過，就當老師幫我們複習，當再一次聽課時就顯得相較簡單了，包刮Github及Replit的基本操作，以及創建網站。</p>
-<br />Github 帳號 << <a href='Github 帳號.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
+    <div id="tipue_search_content">猜猜看遊戲 << <a href='猜猜看遊戲.html'>Previous</a> <a href='課程期中心得.html'>Next</a> >> 課程期中心得<br /><h1>w14</h1>
+<p><span>wcm2024第十四週課，有關可攜程式系統的批次檔案說明</span></p>
+<p></p>
+</section>
+</div>
+</div>
+</div>
+</div>
+</div>
+<br />猜猜看遊戲 << <a href='猜猜看遊戲.html'>Previous</a> <a href='課程期中心得.html'>Next</a> >> 課程期中心得</div>
 
     <!-- footer -->
       <div class="container">
