修改 網站內容

--- a/config/content.htm
+++ b/config/content.htm
@@ -34,7 +34,8 @@
 <div><span>在 Replit 檢視動態網站或網誌推送到 Github 之前的內容, 必須要在動態與靜態模式中擇一使用.</span></div>
 <div><span>1.登入Replit</span></div>
 <div><span>2.進入個人網頁後,log in,將cmsimde_site選取後點擊Config更改標題,名稱為wcm2024 CYA41223106</span></div>
-<h3>利用 Codespaces 維護網站</h3>
+<div><span></span></div>
+<div><span><img caption="false" height="38" src="/images/333.png" width="200"/></span></div><h3>利用 Codespaces 維護網站</h3>
 <div><span>使用 Github Codespaces 維護網站的好處是提供多終端機與多 ports 開啟功能</span></div>
 <div><span>能夠同時開啟靜態網站與動態網站</span></div>
 <div>
@@ -293,7 +294,8 @@ os.system("chmod og-rwx /home/runner/.ssh/id_rsa")</pre>
 <div>
 <h3>從教務主機直接擷取資料</h3>
 <p>利用 wsgi_v1.py 可以取得結果: wsgi_v1_output.txt 表示可以利用 Flask 建置網站程式取下教務主機中的相關資料.</p>
-<h2>w13</h2>
+<p><img caption="false" height="450" src="/images/123.png" width="418"/></p>
+<p><img alt="" height="394" src="/images/456.png" width="400"/></p><h2>w13</h2>
 <div>
 <div><span>從單機猜數字遊戲與 AI 應用談起</span></div>
 <div>
