--- a/content/從教務主機直接擷取資料.html
+++ b/content/從教務主機直接擷取資料.html
@@ -144,7 +144,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>從教務主機直接擷取資料</h1>
 <p>利用 wsgi_v1.py 可以取得結果: wsgi_v1_output.txt 表示可以利用 Flask 建置網站程式取下教務主機中的相關資料.</p>
-<br />w11 << <a href='w11.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
+<p><img caption="false" height="450" src="./../images/123.png" width="418"/></p>
+<p><img alt="" height="394" src="./../images/456.png" width="400"/></p><br />w11 << <a href='w11.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
 
     <!-- footer -->
       <div class="container">
