--- a/content/利用Replit修改個人網站標題.html
+++ b/content/利用Replit修改個人網站標題.html
@@ -146,7 +146,8 @@ img.add_border {
 <div><span>在 Replit 檢視動態網站或網誌推送到 Github 之前的內容, 必須要在動態與靜態模式中擇一使用.</span></div>
 <div><span>1.登入Replit</span></div>
 <div><span>2.進入個人網頁後,log in,將cmsimde_site選取後點擊Config更改標題,名稱為wcm2024 CYA41223106</span></div>
-<br />確認已建立個人網站 << <a href='確認已建立個人網站.html'>Previous</a> <a href='利用 Codespaces 維護網站.html'>Next</a> >> 利用 Codespaces 維護網站</div>
+<div><span></span></div>
+<div><span><img caption="false" height="38" src="./../images/333.png" width="200"/></span></div><br />確認已建立個人網站 << <a href='確認已建立個人網站.html'>Previous</a> <a href='利用 Codespaces 維護網站.html'>Next</a> >> 利用 Codespaces 維護網站</div>
 
     <!-- footer -->
       <div class="container">
